testsuite/tests/properties/invalid_super/no_overriden.lkt
import common

class FooNode implements Node[FooNode] {
    @exported fun p(): Int = node.super() + 1
}

class Example: FooNode implements TokenNode {
}

class Number: FooNode implements TokenNode {
}
